updating help file according to changes in functionality (added options when to block build: running vs queued items...)

--- a/src/main/webapp/help-useBuildBlocker.html
+++ b/src/main/webapp/help-useBuildBlocker.html
@@ -23,6 +23,7 @@
 -->
 
 <div>
-  Enable the build blocker to prevent this job to run while one of the here configured other jobs are running.
+  Enable the build blocker to prevent this job to run while one of the here configured other jobs are running,
+  or are in queue - select option in dropdown box.
   The blocked jobs stays in the queue until all blocking jobs are not running.
 </div>
